# django-axios

./: README.md  bulk.json  pyproject.toml
demo/account/: urls.py  views.py
demo/demo/: settings.py  socket.py  wsgi.py
django_axios/: apps.py  settings.py  socket.py
